--- a/fonts.css
+++ b/fonts.css
@@ -18,3 +18,10 @@
   font-weight: 500;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'gotham_proregular';
+  src: url('ofont.ru_gotham_pro-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
