--- a/styles.css
+++ b/styles.css
@@ -372,7 +372,7 @@ body {
 }
 
 .tree-text__subtitle {
-  font: 14px/17px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+  font: 14px/17px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   color: #fff;
   margin: 15px 45px 20px 40px;
 
@@ -440,7 +440,7 @@ body {
 }
 
 .stories__text {
-  font: 14px/17px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+  font: 14px/17px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   color: #000;
   height: 105px;
   margin-top: 0;
@@ -536,7 +536,7 @@ footer {
 }
 
 .footer-sing__subtitle {
-  font: 12px/12px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+  font: 12px/12px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   color: #fff;
   margin-top: 6px;
 }
@@ -544,7 +544,7 @@ footer {
 .menu-account__item,
 .menu-service__item,
 .menu-miscel__item {
-  font: 12px/12px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+  font: 12px/12px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   color: #fff;
   text-decoration: none;
   list-style-type: none;
@@ -609,7 +609,7 @@ footer {
 }
 
 .footer__niz {
-  font: 12px/12px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+  font: 12px/12px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   color: #fff;
   text-align: center;
   padding-right: 4px;
@@ -928,7 +928,7 @@ footer {
   }
 
   .tree-text__subtitle {
-    font: 13px/16px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 13px/16px 'gotham_proregular', Arial, Helvetica, Sans-serif;
     margin: 0 35px 16px 40px;
   }
 
@@ -980,7 +980,7 @@ footer {
   }
 
   .stories__text {
-    font: 13px/16px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 13px/16px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
   .wrapper__choice_one,
@@ -1169,11 +1169,11 @@ footer {
   }
 
   .tree-text__subtitle {
-    font: 12px/16px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 12px/16px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
   .stories__text {
-    font: 12px/16px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 12px/16px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
   .gallery {
@@ -1218,7 +1218,7 @@ footer {
   }
 
   .tree-text__subtitle {
-    font: 11px/16px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 11px/16px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
   .tree-text__title {
@@ -1364,7 +1364,7 @@ footer {
   .menu-service__item,
   .menu-miscel__item,
   .footer-sing__subtitle {
-    font: 12px/11.5px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 12px/11.5px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
 }
@@ -1524,7 +1524,7 @@ footer {
   }
 
   .tree-text__subtitle {
-    font: 20px/23px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 20px/23px 'gotham_proregular', Arial, Helvetica, Sans-serif;
     margin: 0 1px;
   }
 
@@ -1588,7 +1588,7 @@ footer {
   }
 
   .stories__text {
-    font: 20px/25px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 20px/25px 'gotham_proregular', Arial, Helvetica, Sans-serif;
     margin-bottom: 19px;
     height: 200px;
     padding-right: 1px;
@@ -1735,7 +1735,7 @@ footer {
   }
 
   .stories__text {
-    font: 18px/23px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 18px/23px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
   .stories__button {
@@ -1782,7 +1782,7 @@ footer {
   }
 
   .tree-text__subtitle {
-    font: 18px/21px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 18px/21px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
   .tree-box {
@@ -2041,7 +2041,7 @@ footer {
   .menu-service__item,
   .menu-miscel__item,
   .footer-sing__subtitle {
-    font: 17px/19px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 17px/19px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
   .footer-sing {
@@ -2095,7 +2095,7 @@ footer {
   }
 
   .tree-text__subtitle {
-    font: 16px/20px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 16px/20px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
   .tree {
@@ -2109,7 +2109,7 @@ footer {
   }
 
   .stories__text {
-    font: 16px/20px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 16px/20px 'gotham_proregular', Arial, Helvetica, Sans-serif;
     height: 130px;
   }
 
@@ -2361,7 +2361,7 @@ footer {
   }
 
   .tree-text__subtitle {
-    font: 14px/17px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 14px/17px 'gotham_proregular', Arial, Helvetica, Sans-serif;
     margin: 0 10px 30px 10px;
     line-height: 17px;
   }
@@ -2405,7 +2405,7 @@ footer {
   }
 
   .stories__text {
-    font: 14px/17.5px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 14px/17.5px 'gotham_proregular', Arial, Helvetica, Sans-serif;
     width: 279px;
     height: auto;
     padding-left: 2px;
@@ -2562,7 +2562,7 @@ footer {
   .menu-service__item,
   .menu-miscel__item,
   .footer-sing__subtitle {
-    font: 15px/14px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 15px/14px 'gotham_proregular', Arial, Helvetica, Sans-serif;
     margin-bottom: 0;
   }
 
@@ -2614,7 +2614,7 @@ footer {
   }
 
   .footer__niz {
-    font: 13px/12px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
+    font: 13px/12px 'gotham_proregular', Arial, Helvetica, Sans-serif;
   }
 
 }
