--- a/styles.css
+++ b/styles.css
@@ -365,7 +365,7 @@ body {
 }
 
 .tree-text__title {
-  font: 22px/27px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
+  font: 22px/28px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   color: #fff;
   margin: 0 30px 5px 40px;
 
@@ -510,7 +510,7 @@ footer {
 .footer-wrapper {
   display: flex;
   justify-content: space-between;
-  width: 76%;
+  width: 67%;
   margin: auto;
   padding-top: 56px;
   margin-bottom: 40px;
@@ -920,16 +920,17 @@ footer {
 
   .tree-text {
     height: 190px;
+    letter-spacing: 0.1px;
   }
 
   .tree-text__title {
     margin-top: 7px;
-    margin-bottom: 11px;
+    margin-bottom: 9px;
   }
 
   .tree-text__subtitle {
     font: 13px/16px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
-    margin: 0 35px 16px 40px;
+    margin: 0 35px 15px 40px;
   }
 
   .tree-text__button {
@@ -1018,16 +1019,23 @@ footer {
   }
 
   .footer-wrapper {
-    width: 83%;
+    width: 76%;
     padding-top: 57px;
   }
 
+  .menu-account,
+  .menu-service,
+  .menu-miscel {
+    margin-top: 5px;
+  }
+
   .footer-account {
-    padding-left: 0;
+    padding-left: 3px;
   }
 
   .footer-sing {
     padding-right: 0;
+    padding-left: 15px;
   }
 
   .footer-sing__button {
@@ -1037,6 +1045,7 @@ footer {
 
   .social-icons {
     width: 146px;
+    margin-right: 29px;
   }
 
   .social-icons__item_fb {
@@ -1255,13 +1264,13 @@ footer {
   .menu__btn {
     display: flex;
     align-items: center;
-    position: fixed;
-    top: 54px;
+    position: relative;
+    top: 35px;
     right: 43px;
     width: 62px;
     height: 26px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 10;
   }
 
   .menu__btn > span,
@@ -1319,6 +1328,7 @@ footer {
   #menu__toggle:checked ~ .menu {
     visibility: visible;
     left: 0;
+    z-index: 9;
   }
 
   .logo-img_one {
@@ -2233,7 +2243,7 @@ footer {
   }
 
   .menu__btn {
-    top: 33px;
+    top: 13px;
     right: 47px;
     width: 41px;
     height: 16px;
@@ -2351,6 +2361,7 @@ footer {
   .tree-text {
     width: 80%;
     margin-top: 65px;
+    letter-spacing: 0;
   }
 
   .tree-text__title {
@@ -2509,7 +2520,7 @@ footer {
     text-align: center;
     grid-template-columns: 100%;
     padding-top: 21px;
-    margin-bottom: 25px;
+    margin-bottom: 21px;
   }
 
   .footer-account {
@@ -2610,7 +2621,7 @@ footer {
 
   .social-icons {
     width: 180px;
-    margin-left: 94px;
+    margin-left: 104px;
   }
 
   .footer__niz {
@@ -2639,7 +2650,7 @@ footer {
   }
 
   .menu__btn {
-    right: 52px;
+    right: 19px;
     width: 42px;
   }
 
